# measurement-plugin-converter-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ISSUE_TEMPLATES/: bug_report.md
batch_files/: install.bat
dependencies/: ni_measurement_plugin_sdk_service-2.1.0.dev4-py3-none-any.whl  ni_measurement_plugin_ui_creator-1.0.0-py3-none-any.whl  ni_measurement_plugin_ui_creator-1.0.0.dev10-py3-none-any.whl  ni_measurement_ui_creator-1.0.0.dev4-py3-none-any.whl  ni_measurement_ui_creator-1.0.0.dev5-py3-none-any.whl  ni_measurement_ui_creator-1.0.0.dev6-py3-none-any.whl  ni_measurement_ui_creator-1.0.0.dev7-py3-none-any.whl  ni_measurement_ui_creator-1.0.0.dev8-py3-none-any.whl
docs/: HLD.md  NI Measurement Plug-In Converter User Manual.docx  ni_measurement_plugin_converter_hld.md  ni_measurement_plugin_ui_creator_hld.md
docs/HLD/: ni_measurement_plugin_converter_hld.md
examples/: boolean_control_and_indicator.py  pin_and_ioresource_control.py  string_array_input_and_output.py
ni-measurement-ui-creator/: CHANGELOG.md  README.md  pyproject.toml
ni-measurement-ui-creator/dependencies/: ni_measurement_plugin_sdk_service-2.1.0.dev4-py3-none-any.whl
ni-measurement-ui-creator/docs/: User Manual.docx
ni-measurement-ui-creator/docs/HLD/: ni_measurement_ui_creator_hld.md
ni-measurement-ui-creator/examples/: boolean_control_and_indicator.py  numeric_array_input_and_output.py  numeric_control_and_indicator.py  pin_and_ioresource_control.py  pin_control.py  string_array_input_and_output.py  string_control_and_indicator.py  toggle_image_button_and_indicator.py
ni-measurement-ui-creator/src/ni_measurement_ui_creator/: __init__.py  __main__.py  main.py
ni-measurement-ui-creator/src/ni_measurement_ui_creator/constants/: __init__.py  _cli.py  _ui_elements.py
ni-measurement-ui-creator/src/ni_measurement_ui_creator/models/: __init__.py  _ui_elements.py
ni-measurement-ui-creator/src/ni_measurement_ui_creator/templates/: measurement.measui.mako
ni-measurement-ui-creator/src/ni_measurement_ui_creator/utils/: _client.py  _common_elements.py  _create_measui.py  _exceptions.py  _helpers.py  _logger.py  _measui_file.py  _multiple_ui_elements.py  _numeric_elements.py  _pin_element.py  _special_data_elements.py  _string_elements.py  _toggle_elements.py  _ui_elements.py  _update_measui.py  _write_xml.py
ni_measurement_converter/: __init__.py  __main__.py  main.py  template.py
ni_measurement_converter/constants/: __init__.py  messages.py  template_files.py
ni_measurement_converter/helpers/: __init__.py  assign_session.py  extract_inputs.py  extract_outputs.py  logger.py  modify_input_args.py  modify_session_initializer.py
ni_measurement_converter/models/: _cli.py
ni_measurement_converter/templates/: measurement.py.mako  start.bat.mako
src/converter/: CHANGELOG.md  README.md  pyproject.toml
src/converter/ni_measurement_plugin_converter/: __init__.py  __main__.py  _constants.py  main.py
src/converter/ni_measurement_plugin_converter/_models/: __init__.py  _inputs_outputs.py
src/converter/ni_measurement_plugin_converter/_utils/: __init__.py  _create_measui_file.py  _extract_inputs.py  _extract_outputs.py  _get_function_tree.py  _logger.py  _manage_session.py  _manage_session_helper.py  _measurement_service.py  _write_data.py
src/converter/ni_measurement_plugin_converter/constants/: __init__.py  _cli.py  _files.py  _measurement_service.py
src/converter/ni_measurement_plugin_converter/models/: __init__.py  _cli.py  _exceptions.py
src/converter/ni_measurement_plugin_converter/templates/: _helpers.py.mako  measurement.py.mako  measurement.serviceconfig.mako  start.bat.mako
src/converter/ni_measurement_plugin_converter/utils/: __init__.py  _constants.py  _create_measui_file.py  _extract_inputs.py  _extract_outputs.py  _get_function_tree.py  _logger.py  _manage_session.py  _manage_session_helper.py  _measurement_service.py  _write_data.py
src/ni_measurement_plugin_converter/: __init__.py  __main__.py  main.py
src/ni_measurement_plugin_converter/constants/: __init__.py  _cli.py  _files.py  _logger.py  _measui.py  _measurement.py  _measurement_service.py  _messages.py  _template_files.py  messages.py  template_files.py
src/ni_measurement_plugin_converter/helpers/: __init__.py  _get_function_tree.py  assign_session.py  extract_inputs.py  logger.py  modify_session_initializer.py
src/ui_creator/: CHANGELOG.md  README.md  pyproject.toml
src/ui_creator/examples/: boolean_control_and_indicator.py  numeric_array_input_and_output.py  numeric_control_and_indicator.py  pin_and_ioresource_control.py  string_array_input_and_output.py  string_control_and_indicator.py
src/ui_creator/ni_measurement_plugin_ui_creator/: __init__.py  __main__.py  constants.py  models.py
src/ui_creator/ni_measurement_plugin_ui_creator/templates/: measurement.measui.mako
src/ui_creator/ni_measurement_plugin_ui_creator/utils/: __init__.py  _client.py  _create_measui.py  _helpers.py  _logger.py  _measui_file.py  _numeric_elements.py  _special_data_elements.py  _string_elements.py  _toggle_elements.py  _ui_elements.py  _update_measui.py  client.py  common_elements.py  create_measui.py  exceptions.py  helpers.py  logger.py  measui_file.py  numeric_elements.py  special_data_elements.py  string_elements.py  toggle_elements.py  ui_elements.py  update_measui.py
src/ui_creator/ni_measurement_ui_creator/: __init__.py
src/ui_creator/ni_measurement_ui_creator/constants/: _cli.py
src/ui_creator/ni_measurement_ui_creator/models/: _ui_elements.py
src/ui_creator/ni_measurement_ui_creator/templates/: measurement.measui.mako
src/ui_creator/ni_measurement_ui_creator/utils/: _client.py  _exceptions.py  _logger.py  _measui_file.py  _toggle_elements.py  _ui_elements.py  _update_measui.py
tests/: __init__.py
ui_creator_examples/: numeric_array_input_and_output.py  numeric_control_and_indicator.py
ui_creator_helpers_usage_examples/: README.md
(+20 files in other folders)
