[tool.poetry]
name = "ni_measurement_plugin_converter"
version = "1.0.0-dev0"
description = "Measurement Plugin Converter for Python"
authors = ["NI <opensource@ni.com>"]
readme = "README.md"
packages = [{ include = "ni_measurement_plugin_converter", from = "src" }]
repository = "https://github.com/ni/python-code-migration-utility"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    # Poetry automatically adds classifiers for the license and the supported Python versions.
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]

[tool.poetry.dependencies]
python = "^3.8"
Mako = "^1.2.1"
click = "^8.1.3"
ni-measurement-service = "^0.11.1"
nidmm = "^1.4.8"
astor = "^0.8.1"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ni-python-styleguide = "^0.4.1"

[tool.poetry.scripts]
ni-measurement-plugin-converter = "ni_measurement_plugin_converter.main:convert_measurement"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
