[tool.poetry]
name = "ni_measurement_plugin_converter"
version = "1.0.0-dev1"
description = "Measurement Plug-In Converter for Python"
authors = ["NI <opensource@ni.com>"]
readme = "README.md"
packages = [{ include = "ni_measurement_plugin_converter", from = "src" }]
repository = "https://github.com/ni/python-code-migration-utility"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    # Poetry automatically adds classifiers for the license and the supported Python versions.
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.8"
Mako = "^1.2.1"
click = "^8.1.3"
astor = "^0.8.1"
pydantic = "^2.8.2"
ni-measurement-plugin-sdk-service = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ni-python-styleguide = "^0.4.1"
nidcpower = { version = "^1.4.8", extras = ["grpc"] }
nidmm = { version = "^1.4.8", extras = ["grpc"] }

[tool.poetry.scripts]
ni-measurement-plugin-converter = "ni_measurement_plugin_converter.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
