[tool.poetry]
name = "ni_measurement_ui_creator"
version = "1.0.0-dev3"
description = "NI Measurement UI Creator"
authors = ["NI <opensource@ni.com>"]
repository = "https://github.com/ni/"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    # Poetry automatically adds classifiers for the license and the supported Python versions.
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.7.1"
click = "^8.1.7"
mako = "^1.3.5"

[tool.poetry.scripts]
ni-measurement-ui-creator = "ni_measurement_ui_creator.main:run"

[tool.poetry.group.dev.dependencies]
ni-python-styleguide = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
