[tool.poetry]
name = "ni_measurement_plugin_converter"
version = "1.0.0-dev8"
description = "Measurement Plug-In Converter for Python"
authors = ["NI <opensource@ni.com>"]
readme = "README.md"
repository = "https://github.com/ni/measurement-plugin-converter-python"
packages = [{ include = "ni_measurement_plugin_converter"}]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    # Poetry automatically adds classifiers for the license and the supported Python versions.
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.8"
Mako = "^1.2.1"
click = "^8.1.3"
astor = "^0.8.1"
pydantic = "^2.8.2"
ni-measurement-ui-creator = "^1.0.0.dev8"
ni-measurement-plugin-sdk-service = "^2.1.0"
black = "^24.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
ni-python-styleguide = "^0.4.1"
nidcpower = { version = "^1.4.8", extras = ["grpc"] }
nidmm = { version = "^1.4.8", extras = ["grpc"] }
nidigital = { version = "^1.4.8", extras = ["grpc"] }
niswitch = { version = "^1.4.8", extras = ["grpc"] }
niscope = { version = "^1.4.8", extras = ["grpc"] }
nifgen = { version = "^1.4.8", extras = ["grpc"] }
nidaqmx = { version = "^1.0.0", extras = ["grpc"] }
pyvisa = "^1.14.1"
pyvisa-sim = "^0.6.0"

[tool.poetry.scripts]
ni-measurement-plugin-converter = "ni_measurement_plugin_converter:convert_to_plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
