[tool.poetry]
name = "ni_measurement_plugin_converter"
version = "1.0.0-dev9"
description = "CLI tool for converting Python measurements to Python measurement plug-ins."
authors = ["NI <opensource@ni.com>"]
readme = "README.md"
repository = "https://github.com/ni/measurement-plugin-converter-python"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    # Poetry automatically adds classifiers for the license and the supported Python versions.
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.8"
astor = "^0.8.1"
black = "^24.8.0"
click = "^8.1.3"
mako = "^1.2.1"
ni-measurement-plugin-ui-creator = "^1.0.0.dev10"
ni-measurement-plugin-sdk-service = "^2.1.0"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
ni-python-styleguide = "^0.4.1"
mypy = "^1.13.0"
bandit = { version = "^1.7", extras = ["toml"] }
nidcpower = { version = "^1.4.8", extras = ["grpc"] }
nidmm = { version = "^1.4.8", extras = ["grpc"] }
nidigital = { version = "^1.4.8", extras = ["grpc"] }
niswitch = { version = "^1.4.8", extras = ["grpc"] }
niscope = { version = "^1.4.8", extras = ["grpc"] }
nifgen = { version = "^1.4.8", extras = ["grpc"] }
nidaqmx = { version = "^1.0.0", extras = ["grpc"] }
pyvisa = "^1.14.1"
pyvisa-sim = "^0.6.0"

[tool.poetry.scripts]
ni-measurement-plugin-converter = "ni_measurement_plugin_converter:convert_to_plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
  "mako.*",
  "astor.*",
]
ignore_missing_imports = true

[tool.bandit]
skips = [
  "B702", # use_of_mako_templates
]
exclude_dirs = [".venv"]
