[tool.poetry]
name = "ni_measurement_plugin_ui_creator"
version = "1.0.0-dev10"
description = "CLI tool to create/update `.measui` files for measurement plug-ins."
authors = ["NI <opensource@ni.com>"]
readme = "README.md"
repository = "https://github.com/ni/measurement-plugin-converter-python"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    # Poetry automatically adds classifiers for the license and the supported Python versions.
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
mako = "^1.3.5"
ni-measurement-plugin-sdk-service = "^2.1.0"
pydantic = "^2.7.1"

[tool.poetry.group.dev.dependencies]
ni-python-styleguide = "^0.4.6"
mypy = "^1.13.0"
bandit = { version = "^1.7", extras = ["toml"] }

[tool.poetry.scripts]
ni-measurement-plugin-ui-creator = "ni_measurement_plugin_ui_creator:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
  "mako.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv"]